--- a/cart.html
+++ b/cart.html
@@ -98,7 +98,7 @@
                     <h3>Contact</h3>
                     <address>
                         <p><i class="fas fa-envelope"></i> contact@blogandshop.com</p>
-                        <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                        <p><i class="fas fa-phone"></i> (+254) 714-924-394</p>
                     </address>
                 </div>
             </div>
