--- a/shop/product.html
+++ b/shop/product.html
@@ -43,17 +43,17 @@
                         <img src="https://www.shutterstock.com/image-photo/headphones-isolate-on-white-wireless-black-2466522991" alt="Wireless Headphones" id="main-product-image">
                     </div>
                     <div class="thumbnail-container">
-                        <img src="https://www.pexels.com/photo/silhouette-of-palm-trees-near-shoreline-461940/" alt="Thumbnail 1" class="thumbnail active" data-image="https://www.pexels.com/photo/solitary-walker-on-snow-covered-mountain-slope-30361025/">
-                        <img src="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Thumbnail 2" class="thumbnail" data-image="https://via.placeholder.com/600x600?text=Back+View">
-                        <img src="https://images.pexels.com/photos/1114690/pexels-photo-1114690.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Thumbnail 3" class="thumbnail" data-image="https://www.pexels.com/photo/macro-photography-of-water-drops-3394939/">
-                        <img src="https://www.pexels.com/photo/red-concrete-brick-259915/" alt="Thumbnail 4" class="thumbnail" data-image="https://www.pexels.com/photo/red-concrete-brick-259915/">
+                        <img src="../images/thumbnail1.png" alt="Thumbnail 1" class="thumbnail active" data-image="https://www.pexels.com/photo/solitary-walker-on-snow-covered-mountain-slope-30361025/">
+                        <img src="../images/thumbnail1.png" alt="Thumbnail 2" class="thumbnail" data-image="https://via.placeholder.com/600x600?text=Back+View">
+                        <img src="../images/thumbnail1.png" class="thumbnail" data-image="https://www.pexels.com/photo/macro-photography-of-water-drops-3394939/">
+                        <img src="../images/thumbnail1.png" alt="Thumbnail 4" class="thumbnail" data-image="https://www.pexels.com/photo/red-concrete-brick-259915/">
                     </div>
                 </div>
                 
                 <div class="product-info">
                     <h1 class="product-title">Premium Wireless Headphones</h1>
                     <div class="product-meta">
-                        <span class="product-sku">SKU: HP-2023-BLK</span>
+                        <span class="product-sku">SKU: HP-2025-BLK</span>
                         <div class="product-rating">
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -342,7 +342,7 @@
                     <h3>Contact</h3>
                     <address>
                         <p><i class="fas fa-envelope"></i> contact@blogandshop.com</p>
-                        <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                        <p><i class="fas fa-phone"></i> (+254) 714-924-394</p>
                     </address>
                 </div>
             </div>
