--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <div class="cart-icon">
+            <div class="cart-icon" id="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count">0</span>
-            </div>
-
-            <!-- Cart Dropdown -->
-            <!-- <div class="cart-dropdown" id="cart-dropdown">
+                  <!-- Cart Dropdown -->
+            <div class="cart-dropdown" id="cart-dropdown">
                 <div class="cart-header">
                     <h3>Your Cart</h3>
                     <span class="close-cart">&times;</span>
                 </div>
-                <div class="cart-items-container" id="cart-items-container"> -->
+                <div class="cart-item s-container" id="cart-items-container"> -->
                     <!-- Cart items will be loaded here via JavaScript -->
-                    <!-- <div class="empty-cart-message">
+                    <div class="empty-cart-message">
                         <i class="fas fa-shopping-cart"></i>
                         <p>Your cart is empty</p>
                     </div>
@@ -48,7 +46,10 @@
                     <a href="cart.html" class="btn view-cart-btn">View Cart</a>
                     <a href="checkout.html" class="btn checkout-btn">Checkout</a>
                 </div>
-            </div> -->
+            </div>
+            </div>
+
+          
         </div>
     </header>
 
@@ -88,7 +89,7 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <h3>About Us</h3>
-                    <p>Combining quality content with excellent products since 2023.</p>
+                    <p>Combining quality content with excellent products since 2025.</p>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
@@ -102,7 +103,7 @@
                     <h3>Contact</h3>
                     <address>
                         <p><i class="fas fa-envelope"></i> contact@blogandshop.com</p>
-                        <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                        <p><i class="fas fa-phone"></i> (+254) 714-924-394</p>
                     </address>
                 </div>
             </div>
