--- a/index.html
+++ b/index.html
@@ -25,31 +25,28 @@
             <div class="cart-icon" id="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count">0</span>
-                  <!-- Cart Dropdown -->
-            <div class="cart-dropdown" id="cart-dropdown">
-                <div class="cart-header">
-                    <h3>Your Cart</h3>
-                    <span class="close-cart">&times;</span>
-                </div>
-                <div class="cart-item s-container" id="cart-items-container"> -->
-                    <!-- Cart items will be loaded here via JavaScript -->
-                    <div class="empty-cart-message">
-                        <i class="fas fa-shopping-cart"></i>
-                        <p>Your cart is empty</p>
+                <!-- Cart Dropdown -->
+                <div class="cart-dropdown hidden" id="cart-dropdown">
+                    <div class="cart-header">
+                        <h3>Your Cart</h3>
+                        <span class="close-cart">&times;</span>
+                    </div>
+                    <div class="cart-item s-container" id="cart-items-container">
+                        <div class="empty-cart-message">
+                            <i class="fas fa-shopping-cart"></i>
+                            <p>Your cart is empty</p>
+                        </div>
+                    </div>
+                    <div class="cart-summary">
+                        <div class="cart-subtotal">
+                            <span>Subtotal:</span>
+                            <span id="cart-subtotal">$0.00</span>
+                        </div>
+                        <a href="cart.html" class="btn view-cart-btn">View Cart</a>
+                        <a href="checkout.html" class="btn checkout-btn">Checkout</a>
                     </div>
                 </div>
-                <div class="cart-summary">
-                    <div class="cart-subtotal">
-                        <span>Subtotal:</span>
-                        <span id="cart-subtotal">$0.00</span>
-                    </div>
-                    <a href="cart.html" class="btn view-cart-btn">View Cart</a>
-                    <a href="checkout.html" class="btn checkout-btn">Checkout</a>
-                </div>
             </div>
-            </div>
-
-          
         </div>
     </header>
 
