--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,8 @@
             </nav>
             <div class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count">0</span>
+                <span class="cart-count">0</span
+                                              
             </div>
         </div>
     </header>
