--- a/cart.html
+++ b/cart.html
@@ -1,1 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Your shopping cart for Blog & Shop - combining quality content with excellent products.">
+    <title>Your Cart | Blog & Shop</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <header class="main-header">
+        <div class="container">
+            <h1 class="logo">Blog & Shop</h1>
+            <nav class="main-nav" aria-label="Main navigation">
+                <button class="mobile-menu-btn" aria-label="Toggle menu">
+                    <i class="fas fa-bars" aria-hidden="true"></i>
+                </button>
+                <ul class="nav-list">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../blog/index.html">Blog</a></li>
+                    <li><a href="../shop/index.html">Shop</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="cart-icon" aria-label="Shopping cart">
+                <i class="fas fa-shopping-cart" aria-hidden="true"></i>
+                <span class="cart-count">0</span>
+            </div>
+        </div>
+    </header>
 
+    <main class="cart-main">
+        <div class="container">
+            <h1 class="page-title">Your Shopping Cart</h1>
+            <div class="cart-container">
+                <div class="cart-items" id="cart-items">
+                    <!-- Cart items will be loaded via JavaScript -->
+                    <div class="empty-cart-message">
+                        <i class="fas fa-shopping-cart" aria-hidden="true"></i>
+                        <p>Your cart is empty</p>
+                        <a href="../shop/index.html" class="btn">Continue Shopping</a>
+                    </div>
+                </div>
+                <div class="cart-summary">
+                    <h2>Order Summary</h2>
+                    <div class="summary-details">
+                        <div class="summary-row">
+                            <span>Subtotal</span>
+                            <span id="subtotal">KES 0.00</span>
+                        </div>
+                        <div class="summary-row">
+                            <span>Shipping</span>
+                            <span id="shipping">KES 0.00</span>
+                        </div>
+                        <div class="summary-row">
+                            <span>Tax</span>
+                            <span id="tax">KES 0.00</span>
+                        </div>
+                        <div class="summary-row total">
+                            <span>Total</span>
+                            <span id="total">KES 0.00</span>
+                        </div>
+                    </div>
+                    <button class="btn checkout-btn" id="checkout-btn" aria-label="Proceed to checkout">Proceed to Checkout</button>
+                    <p class="continue-shopping">
+                        or <a href="../shop/index.html">Continue Shopping</a>
+                    </p>
+                </div>
+            </div>
+
+            <section class="recommendations">
+                <h2>You Might Also Like</h2>
+                <div class="product-grid" id="recommended-products">
+                    <!-- Recommended products will be loaded via JavaScript -->
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer class="main-footer">
+        <div class="container">
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h3>About Us</h3>
+                    <p>Combining quality content with excellent products since 2024.</p>
+                </div>
+                <div class="footer-column">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../blog/index.html">Blog</a></li>
+                        <li><a href="../shop/index.html">Shop</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Contact</h3>
+                    <address>
+                        <p><i class="fas fa-envelope" aria-hidden="true"></i> contact@blogandshop.com</p>
+                        <p><i class="fas fa-phone" aria-hidden="true"></i> (+254) 714-924-394</p>
+                    </address>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2025 Blog & Shop. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../js/script.js" defer></script>
+</body>
+</html>
